; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers/extr_wiiu_input.c_wiiu_input_get_capabilities.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers/extr_wiiu_input.c_wiiu_input_get_capabilities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRO_DEVICE_JOYPAD = common dso_local global i32 0, align 4
@RETRO_DEVICE_ANALOG = common dso_local global i32 0, align 4
@RETRO_DEVICE_KEYBOARD = common dso_local global i32 0, align 4
@RETRO_DEVICE_POINTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @wiiu_input_get_capabilities to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wiiu_input_get_capabilities(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i32, i32* @RETRO_DEVICE_JOYPAD, align 4
  %5 = shl i32 1, %4
  %6 = load i32, i32* @RETRO_DEVICE_ANALOG, align 4
  %7 = shl i32 1, %6
  %8 = or i32 %5, %7
  %9 = load i32, i32* @RETRO_DEVICE_KEYBOARD, align 4
  %10 = shl i32 1, %9
  %11 = or i32 %8, %10
  %12 = load i32, i32* @RETRO_DEVICE_POINTER, align 4
  %13 = shl i32 1, %12
  %14 = or i32 %11, %13
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
